--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "leaflet": "^1.7.1",
     "lodash.clonedeep": "^4.5.0",
     "metismenujs": "^1.3.1",
-    "node-sass": "^4.14.1",
     "nouislider-react": "^3.4.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -74,6 +73,7 @@
     "react-switch": "^6.0.0",
     "reactstrap": "^8.9.0",
     "redux-saga": "^1.1.3",
+    "sass": "^1.45.2",
     "simplebar-react": "^2.3.5",
     "web-vitals": "^2.1.0",
     "wnumb": "^1.2.0"
